--- a/app/src/main/res/layout/rating_fragment.xml
+++ b/app/src/main/res/layout/rating_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fregment.ReviewAndRating">
 
     <LinearLayout
@@ -15,7 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="0.10"
             android:orientation="vertical">
 
@@ -23,14 +24,12 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/colorPrimary"
                 android:layout_margin="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:background="@color/colorPrimary"
                     android:orientation="vertical"
                     android:weightSum="1">
 
@@ -40,15 +39,15 @@
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_gravity="center"
-                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="5dp"
                         android:src="@drawable/logo_lok"
                         app:civ_border_color="#000" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
                         android:gravity="center"
+                        android:layout_marginBottom="5dp"
                         android:text="Ms Alina"
                         android:textColor="#fff"
                         android:textSize="20dp"
